--- a/discount/discount.cabal
+++ b/discount/discount.cabal
@@ -33,17 +33,17 @@ library
     CLI
     Discounter
     RateRepositoryImplement
-  build-depends:       base ^>= 4.12.0.0
-              , transformers ^>= 0.5.6.2
+  build-depends:       base ^>= 4.20.0.0
+                     , transformers
   hs-source-dirs:      src
   default-language:    Haskell2010
 
 executable discount
   import: warnings
   main-is: Main.hs
-  build-depends:       base ^>= 4.12.0.0
+  build-depends:       base ^>= 4.20.0.0
                      , discount
-                     , transformers ^>= 0.5.6.2
+                     , transformers
   hs-source-dirs:      app
   default-language:    Haskell2010
 
@@ -51,9 +51,9 @@ test-suite discount-test
   type: exitcode-stdio-1.0
   import: warnings
   main-is: Spec.hs
-  build-depends: base ^>= 4.12.0.0
-               , bytestring ^>= 0.10.8.2
-               , hspec == 2.7.*
+  build-depends: base ^>= 4.20.0.0
+               , bytestring
+               , hspec
                , discount
                , main-tester ^>= 0.2.0.1
   hs-source-dirs: test
